Se activa loader en pagina de juego.

--- a/Entregable3/css/Connect_4.css
+++ b/Entregable3/css/Connect_4.css
@@ -1,6 +1,6 @@
 body{
 	display: grid;
-	overflow:scroll;
+	overflow: hidden;
 	grid-template-columns: 10% 80% 10%;
 	justify-content: center;
 	grid-template-rows: repeat(3, auto);
