--- a/Entregable4/css/style.css
+++ b/Entregable4/css/style.css
@@ -1396,7 +1396,7 @@ body.hero-page{
 }
 
 .hero-title h1, .time-counter h1, .time-counter h2, .history-title h1, 
-.contenedor-carrusel-characters .contenedor-titulo-controles h1,
+.history-wrapper h2, .history-wrapper h3,
 .features-chart .features-chart-title h1, .characters-chart .contenedor-characters-title h1{
   font-family: 'Slackey', cursive;
   color: var(--Color-Primary);  
@@ -1446,16 +1446,24 @@ body.hero-page{
   text-align: center;
 }
 
+/*--------------------HISTORY SECTION-------------------------*/
 .history-chart{
   display: flex;
  /*  width: 100%; */
  /*  height: 500px; */
-  background-image: url(../img/img-games/hero-section/ImgBackHistory.png);
-  background-size: cover;
+  
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 40px 10px 40px 10px;
+}
+
+.history-chart, .features-chart{
+  --opacidad-negro: 0.8;
+  background-image: linear-gradient(rgba(0, 0, 0,var(--opacidad-negro)), rgba(0, 0, 0, var(--opacidad-negro))), url(../img/img-games/hero-section/hero-history-6.png);  
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: round;
 }
 
 .history-text
@@ -1467,9 +1475,6 @@ body.hero-page{
   align-items: center;
   line-height: normal;
 }
-
-
-/*--------------------HISTORY SECTION-------------------------*/
 
 .history-wrapper{
   font-family: 'Slackey', cursive;
@@ -1566,27 +1571,13 @@ body.hero-page{
 
 .history-scroll div > h3 {
   width: 80%;
-  line-height: 30px;
+  line-height: 50px;
   text-align: center;
 }
 
-.history-scroll div:nth-child(1){/* 
-  background-image: url(../img/img-games/hero-section/ImgBackHistory.png); */
+.history-scroll div{
   background-size: auto;
-  /* opacity: .3; */
-}
-
-.history-scroll div:nth-child(2){
-  /* background-image: url(../img/img-games/hero-section/ImgBackHistory.png); */
-  background-size: auto;
- /*  opacity: .3; */
-}
-
-.history-scroll div:nth-child(3){
-  /* background-image: url(../img/img-games/hero-section/ImgBackHistory.png); */
-  background-size: auto;
-  /* opacity: .3; */
-}
+ }
 
 
 
@@ -1887,6 +1878,67 @@ body.hero-page{
   flex-wrap: nowrap;
 }
 
+/*---------------------SPRITE SHEET--------------------------------*/
+
+/* Animación del personaje */
+#sprite {
+  /* Tamaño de la viñeta individual */
+  width:165px;
+  height:165px;
+  /* Cómo hay establecido un tamaño, centramos con margin:auto */
+  margin:auto;  
+  /* Cargamos el sprite (el repeat-x se puede omitir, por defecto se repite) */
+  background:url(../img/img-games/hero-section/cowboy-spritesheet/sprite-cowboy-6.png) repeat-x;
+  /* Aplicamos la animación "fight": 3seg, 20 viñetas y repetimos infinitamente */
+  animation:fight 3s steps(20) infinite;
+  /* Posicionamos el personaje sobre el camino */
+  position:relative;
+  bottom:34px;
+}
+
+/* Animación de personaje caminando: Simplemente mueve el sprite sheet hacia la izquierda, realizando el movimiento. */
+@keyframes fight {
+  /* Partimos de la primera viñeta del sprite sheet */
+  0% { background-position:0 }
+  /* El tamaño total de ancho del sprite. Es negativo para que no se mueva hacia atrás */
+  100% { background-position:-3300px }
+}
+
+/* Background estatico */
+#sprite-back {
+  background:url(../img/img-games/hero-section/cowboy-spritesheet/FondoDesierto.jpg);
+   background-size: cover; 
+   height: 250px;
+}
+
+/* Animación del fondo entre el camino y el background. Efecto "Parallax".*/
+#sprite-subback {
+  background:url(../img/img-games/hero-section/cowboy-spritesheet/back-sprite-7.png);
+  animation: movebg 30s linear infinite; 
+  background-size: cover; 
+  height: 250px;
+}
+
+/* Animación del piso. */
+#sprite-floor {
+  background:url(../img/img-games/hero-section/cowboy-spritesheet/desert-floor-2.png) repeat-x;
+  animation: movebg 20s linear infinite;
+  /* Posicionamos piso, para que no solape al cielo */
+  position:relative;   
+  top: 150px;
+  height: 200px;
+  
+}
+
+/* Animación para mover el piso y montañas*/
+@keyframes movebg {
+  0% { background-position:1000px } 
+  100% { background-position:0 }
+}
+
+
+
+
 /*----------------------FOOTER-------------------------------------*/
 
 footer{
@@ -1898,6 +1950,7 @@ footer{
   justify-content: space-between;
   padding: 20px 80px 20px 80px;
   background: #270977;
+  margin-top: 35px;
 }
 
 .contenedor-ppal-footer > div li,
