--- a/Entregable4/css/style.css
+++ b/Entregable4/css/style.css
@@ -1179,7 +1179,6 @@ form label{
  .carrusel-categorias .contenedor-carrusel-recomendado .carrusel .juego-recomendado{
   min-width: 50%;
   text-align: -webkit-center;
-  /* padding-left: 12px; */
  } 
 
  .carrusel-categorias .contenedor-carrusel-character .carrusel .juego-character.hover,
@@ -1209,26 +1208,6 @@ form label{
 
 /*-----------------------CARDS------------------------------------*/
 
-/* .juego-jugado .contenedor-card-small .datos-juego-small h3,
-.juego-recomendado .contenedor-card-small .datos-juego-small h3,
-.juego-accion .contenedor-card-small .datos-juego-small h3,
-.juego-multijugador .contenedor-card-small .datos-juego-small h3,
-.juego-deportes .contenedor-card-small .datos-juego-small h3{
-    line-height: 36px;
-} */
-
-/* .juego-jugado .contenedor-card-small .datos-juego-small p,
-.juego-recomendado .contenedor-card-small .datos-juego-small p,
-.juego-accion .contenedor-card-small .datos-juego-small p,
-.juego-multijugador .contenedor-card-small .datos-juego-small p,
-.juego-deportes .contenedor-card-small .datos-juego-small p,
-.contenedor-card-big .card-big p{
-    
-    line-height: 20px;
-    letter-spacing: 0.05em;
-    
-} */
-
 .titulo-small-card{
   padding-bottom: 5px;
 }
@@ -1238,14 +1217,6 @@ form label{
     height: 100%;
 }
 
-/* .juego-jugado .contenedor-card-small .datos-juego-small h2,
-.juego-recomendado .contenedor-card-small .datos-juego-small h2,
-.juego-accion .contenedor-card-small .datos-juego-small h2,
-.juego-multijugador .contenedor-card-small .datos-juego-small h2,
-.juego-deportes .contenedor-card-small .datos-juego-small h2{    
-    line-height: 36px;    
-}
- */
 .indicador-estado-gratis, .indicador-estado-agregado{
   display:flex;
   position: fixed;
@@ -1278,7 +1249,6 @@ form label{
     padding: 40px;   
     justify-content: center;
     display: flex;
-    /* transform: scale(0.5); */
 }
 
 .juego-jugado .card-small,
@@ -1309,7 +1279,6 @@ form label{
     display: flex;
     font-size: 30px;
     text-align: left;
-    /* margin-right: 40px; */
     flex-direction: column;
     align-content: center;
     justify-content: space-between;
@@ -1322,10 +1291,6 @@ form label{
     padding: 0px 10px;
     justify-content: space-around;
 }
-
-/* .contenido-small-card{
-  flex-grow: 1;
-} */
 
 .titulo-big-card{
     padding: 10px;
@@ -1342,7 +1307,6 @@ form label{
 
 .precio-small-card{
   align-self: center;
-  /* margin-bottom: 20px; */
 }
 
 .datos-juego-small h1{
@@ -1408,12 +1372,6 @@ body.hero-page{
 .hero-chart-parallax{
   min-height: 600px;
   position: relative;
-  /* display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  align-items: center;
-  align-content: flex-start; */
 }
 
 
@@ -1496,10 +1454,6 @@ body.hero-page{
   letter-spacing: 2px;
   word-spacing: 5px;  
 }
-/* @keyframes heroTitleAnimation{
-  0%{ opacity: 1; }
-  100%{ opacity: 0; }
-} */
 
 .hero-title h1, .characters-title{
   margin:40px 0px;
@@ -1510,22 +1464,21 @@ body.hero-page{
 }
 
 .hero-title{
-   position: absolute;
+   /* position: fixed; */
    text-align: center;
-  /* transform: translateX(400px); */
+   display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .button-preview{
   display: flex;
   flex-wrap: nowrap;
   align-content: center;
-  /* justify-content: space-around; */
   align-items: center;
-  /* padding: 150px; */
 }
 
 .hero-section-central-characters{
-    /* transform: scale(.5) translate(150px ,-200px); */
     display: flex;
     justify-content: center;
 }
@@ -1534,48 +1487,20 @@ body.hero-page{
   text-align: center;
 }
 
-/* .hero2, .hero3, .hero2 img, .hero3 img{
-  height: 50%;
-}
-
-.hero1, .hero4{
-  height: 70%;
-}
-
-.hero1, .hero2{  
-  transform: translate(160px, 250px);
-}
-
-.hero3, .hero4{
-  transform: translate(250px, 250px);  
-}
-
-.reserva{
-  transform: translate(-1000px, -10px);
-  height: 70%;
-} */
 
 .cow-bones {
   width: 50%;
-  /* transform: translate(105px,100px); */
 }
 
 .time-counter{
-  /* padding:30px; */
   text-align: center;
-  /* position: absolute; */
   line-height: 35px;
- /*  padding: 150px; */
- /*  transform: translate(40px, 100px); */
- width: 100%;
+  width: 100%;
 }
 
 /*--------------------HISTORY SECTION-------------------------*/
 .history-chart{
   display: flex;
- /*  width: 100%; */
- /*  height: 500px; */
-  
   flex-direction: column;
   justify-content: center;
   align-items: center;
